Header spacing issue fixed

--- a/style.css
+++ b/style.css
@@ -5,11 +5,13 @@
  Author:       Hash Themes
  Author URI:   https://hashthemes.com
  Template:     total
- Version:      1.1.3
+ Version:      1.1.4
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         two-columns, right-sidebar, custom-background, custom-menu, editor-style, featured-images, footer-widgets, theme-options, threaded-comments, translation-ready, portfolio, education, blog, custom-logo
  Text Domain:  totally
+ Tested up to: 5.4.2
+ Requires PHP: 5.6
 */
 
 body, button, input, select, textarea{
@@ -144,13 +146,13 @@ h6{
     position: relative;
 }
 
-.home.blog:not(.ht-enable-frontpage) #ht-masthead{
+.home.blog:not(.ht-enable-frontpage) #ht-masthead,
+body.ht-titlebar-disabled:not(.ht-enable-frontpage):not(.page-template-home-template) #ht-masthead{
     margin-bottom: 80px;
 }
 
-.ht-sticky-header #ht-content,
-.home.blog.ht-sticky-header:not(.ht-enable-frontpage) #ht-content{
-    padding-top: 0
+#ht-content{
+    padding-top: 0 !important;
 }
 
 .ht-sticky #ht-site-navigation,
